src/shared/components/PopoverBadge/PopoverBadge.scss
.popover-badge {
  text-transform: uppercase;
  white-space: nowrap;
  text-align: center;
}

.badge-wrap {
  width: fit-content;
  height: fit-content;
  padding: 0;
  border: none;
}

.has-tooltip {
  cursor: help;
}

